some more things added

--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 
   <style>
       .max{
-        /* margin-left: -7rem; */
-
-        opacity: 1;
-        transition: 1s;
+        opacity: 0;
+        transition: 2s;
       }
       .img-profile {
         width: 10rem;
       }
       .norm{
-        /* margin-left: unset; */
+        opacity: 1;
         transition: 1s;
       }
       .min{
-        /* margin-left: -30px; */
-        transition: 1s;
+        opacity: 1;
+        transition: 2s;
       }
       .almost-min{
-        /* margin-left: -3rem; */
-        transition: 1s;
+        opacity: 0.5;
+        transition: 2s;
       }
   </style>
 
@@ -74,11 +72,11 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -90,21 +88,29 @@
         <h1 id="elems" class="mb-0">Celestine
           <span class="text-primary">Stephen</span>
         </h1>
-        <div id="elems" class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div id="elems" class="subheading mb-5">Address: Mkpat-enin lga, Akwa Ibom State, Nigeria · +2348104222808 ·
+          <a href="mailto:decele2011@gmail.com">decele2011@gmail.com</a>
         </div>
-        <p id="elems" class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p id="elems" class="lead mb-5">
+          <!-- I am experienced in leveraging
+          agile frameworks to provide a robust
+          synopsis for high level overviews.
+          Iterative approaches to corporate
+          strategy foster collaborative
+          thinking to further the overall
+          value proposition. -->
+        </p>
         <div id="elems"  class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/celxkodez/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://www.github.com/celxkodez">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://www.twitter.com/mr_celx">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/celeuko12">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -119,45 +125,60 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 id="elems" class="mb-0">Senior Web Developer</h3>
-            <div id="elems" class="subheading mb-3">Intelitec Solutions</div>
-            <p id="elems">Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 id="elems" class="mb-0">Web Developer.</h3>
+            <div id="elems" class="subheading mb-3">Hotels.ng</div>
+            <p id="elems">
+              The HNG internship is a 3-month remote internship
+              designed to find and develop the most talented
+              software developers.
+              Everyone is welcome to participate (there is no entrance exam).
+              Anyone can log into the internship using their laptop.
+              Each week, we give tasks. Those who complete them
+              advance forward. We pay the interns weekly.
+              The intern coders are introduced to complex
+              programming frameworks, and get to work on
+              real world software. The finalists are connected to
+              the best companies in the tech ecosystem and get
+              full time jobs and contracts immediately.
+              The internship is managed by hng.tech.
+
+            </p>
           </div>
-          <div id="elems" class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2019  - December 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 id="elems" class="mb-0">Web Developer</h3>
-            <div id="elems" class="subheading mb-3">Intelitec Solutions</div>
-            <p id="elems">Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 id="elems" class="mb-0">Front-end Web Developer</h3>
+            <div id="elems" class="subheading mb-3">START.NG </div>
+            <p id="elems">
+              Start.ng is a remote internship programme for beginner software
+              developers organized by hng.tech. It covers some ranges
+              of software development.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 id="elems" class="mb-0">Junior Web Designer</h3>
-            <div id="elems" class="subheading mb-3">Shout! Media Productions</div>
-            <p id="elems">Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">July 2019  - September 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 id="elems" class="mb-0">Web Design Intern</h3>
-            <div id="elems" class="subheading mb-3">Shout! Media Productions</div>
-            <p id="elems">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 id="elems" class="mb-0">Front-end Web Developer Trainee</h3>
+            <div id="elems" class="subheading mb-3">KODEHAUZ</div>
+            <p id="elems">
+              KodeHauz is a team of Nigerian programmers
+              with interest in providing best ICT solutions as
+              well as necessary systems and structures to help
+              develop capacity and skills in information technology.
+              We are proficient in Web Development,
+              Software Solution, and Embedded Systems.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">10/2018 - 02/2019</span>
           </div>
         </div>
 
@@ -173,24 +194,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 id="elems" class="mb-0">University of Colorado Boulder</h3>
+            <h3 id="elems" class="mb-0">AKWA IBOM STATE UNIVERSITY </h3>
             <div id="elems" class="subheading mb-3">Bachelor of Science</div>
-            <div id="elems">Computer Science - Web Development Track</div>
-            <p id="elems">GPA: 3.23</p>
+            <div id="elems">Computer Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">11/2016 - 11/ 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 id="elems" class="mb-0">James Buchanan High School</h3>
-            <div id="elems" class="subheading mb-3">Technology Magnet Program</div>
-            <p id="elems">GPA: 3.56</p>
+            <h3 id="elems" class="mb-0">AKWA IBOM STATE POLYTECHNIC</h3>
+            <div id="elems" class="subheading mb-3">Computer Science (Diploma).</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">9/2014 - 10/ 2016</span>
           </div>
         </div>
 
@@ -212,66 +231,70 @@
             <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-less"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-gulp"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-vuejs"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
+
+
+
+          <li class="list-inline-item">
+            <i class="fab fa-php"></i>
+          </li>
+
+          <li class="list-inline-item">
+            <i class="fab fa-laravel"></i>
+          </li>
+
         </ul>
 
         <div id="elems"class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li id="elems">
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mobile-First, Responsive Design
+          </li>
+          <li id="elems">
+            <i class="fa-li fa fa-check"></i>
+            Cross Functional Teams
+          </li>
           <li id="elems">
             <i class="fa-li fa fa-check"></i>
             Cross Browser Testing &amp; Debugging</li>
+
           <li id="elems">
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li id="elems">
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Agile Development
+          </li>
         </ul>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
-        <h2 id="elems" class="mb-5">Interests</h2>
-        <p id="elems">Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p id="elems" class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 id="elems" class="mb-5">Projects</h2>
+        <!-- <p id="elems">Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <p id="elems" class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
+
       </div>
     </section>
 
-    <hr class="m-0">
+    <!-- <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
@@ -305,7 +328,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
@@ -358,7 +381,7 @@ function updatePosition() {
   let body = document.querySelectorAll('#elems');
   body.forEach(body =>{
 
- 
+
   let tri = getPosition(body);
   console.log(tri);
   if(tri.y <39){
