--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h1 id="elems" class="mb-0">Celestine
           <span class="text-primary">Stephen</span>
         </h1>
-        <div id="elems" class="subheading mb-5">Address: Mkpat-enin lga, Akwa Ibom State, Nigeria · +2348104222808 ·
+        <div id="elems" class="subheading mb-5">Mkpat-enin lga, Akwa Ibom State, Nigeria · +2348104222808 ·
           <a href="mailto:decele2011@gmail.com">decele2011@gmail.com</a>
         </div>
         <p id="elems" class="lead mb-5">
