--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         opacity: 0.5;
         transition: 2s;
       }
+
+      .img-profile {
+        object-fit: cover;
+      }
   </style>
 
 </head>
